Refactor character encoding method usage
This commit simplifies the usage of character encoding methods. StandardCharsets.UTF_8.name() was replaced by StandardCharsets.UTF_8 in several places. This was done to improve code readability since StandardCharsets.UTF_8.name() and StandardCharsets.UTF_8 essentially do the same thing. Additionally, try-catch block related to encoding in RequestReceiver class has been removed since the encoding method used will not throw an exception, therefore the block was redundant.